# philosophers

./: .gitignore  CMakeLists.txt  README.md
includes/: philosophers.h
philo/: Makefile  philo
philo/includes/: philosophers.h
philo/src/: checker.c  eat.c  forks_utils.c  init.c  init_1.c  init_2.c  main.c  observer.c  status_checker.c  think_live.c
philo/src/utils/: free_resources.c  precise_sleep.c  print.c
philo_bonus/: Makefile  philo_bonus  philo_two
philo_bonus/includes/: philosophers.h
philo_bonus/src/: checker.c  eat.c  init.c  init_1.c  init_forks.c  main.c  observer.c  think_live.c
philo_bonus/src/utils/: atoi_err.c  exit.c  free_resources.c  print.c  time.c
philo_one/: Makefile  philo_one  philosophers  valgrind-out.txt
philo_one/includes/: philosophers.h
philo_one/src/: checker.c  eat.c  init.c  init_1.c  main.c  observer.c  sleep_think.c
philo_one/src/utils/: atoi_err.c  exit.c  free_resources.c  ft_atoi.c  print.c  time.c
philo_two/: Makefile  philo_two
philo_two/includes/: philosophers.h
philo_two/src/: eat.c  init.c  init_1.c  think_live.c
philo_two/src/utils/: contains_nums.c  free_resources.c
src/: eat.c  init.c  main.c  observer.c  sleep_think.c  status_checker.c
src/utils/: ft_atio.c  print.c  time.c
